crates/agglayer-config/tests/snapshots/validate_deserialize__prover_grpc_max_decoding_message_size.snap
---
source: crates/agglayer-config/tests/validate_deserialize.rs
expression: config
---
grpc-endpoint = "127.0.0.1:8080"
max-concurrency-limit = 100
max-request-duration = "5m"
max-buffered-queries = 100

[grpc]
max-decoding-message-size = 104857600

[log]
level = "info"
outputs = []
format = "pretty"

[telemetry]
prometheus-addr = "0.0.0.0:3000"

[shutdown]
runtime-timeout = "5s"

[primary-prover.NetworkProver]
proving-timeout = "5m"
